--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,9 @@
   <nav class="nav">
     <a href="{{ '/' | relative_url }}">Home</a>
     <a href="{{ '/posts/' | relative_url }}">Blog</a>
-    <a href="{{ '/kits/' | relative_url }}">Kits</a>
+    <a href="{{ '/romantic/' | relative_url }}">Romantic Kit</a>
+    <a href="{{ '/ai-hermeneutics/' | relative_url }}">AI Hermeneutics</a>
     <a href="{{ '/notebooks/' | relative_url }}">Notebooks</a>
-    <a href="{{ '/debate/' | relative_url }}">Archivists’ Debate</a>
+    <a href="{{ '/debate/' | relative_url }}">Archivists' Debate</a>
   </nav>
 </header>
